[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/easy_charts/utilities/containers/point_container/point_container.gd" type="Script" id=1]

[node name="PointContainer" type="Control"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_PointContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PointContainer_mouse_exited"]
